--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Player</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <script src="assets/js/app.js"></script>
 </head>
 
 <body>
@@ -24,7 +25,7 @@
     <div class="div1">
         <h1>Musique Player</h1>
         <img class="imgvinyle" src="assets/images/vinyle1.png" alt="Disque vinyle"> 
-        <img class="ninho" src="assets/images/ninho.jpg" alt="Ninho">
+    
     </div>
 
     <div class="div2">
