--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@
     <div class="div2">
 
     </div>
-    <p>Coucou</p>
+    <button id="btnPause"> Mettre CD en pause</button>
 </body>
 
 </html>
 
-1
